Implement ProductService with external UserService integration
- Integrated ProductService with external UserService to fetch user data for access control.
- Used RestTemplate to make API calls to the authentication service and retrieve user role and username.
- Added role-based access control (USER and ADMIN) for creating, updating, and deleting products in orders.
- Ensured that users can only manage their own orders and products, while admins have full access.